# FortranSerialization

./: CMakeLists.txt  README.md
src/: fortran_serialization.f90  serialization.f90
test/: CMakeLists.txt  test1.f90  test2.f90
